tests/snapshots/repo_intelligence/repo_projected_page_navigation_modelica_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_projection_support.rs
expression: value
---
{
  "center": {
    "kind": "page",
    "node": null,
    "page": {
      "doc_id": "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation",
      "doc_ids": [
        "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "example_ids": [],
      "format_hints": [
        "modelica_annotation"
      ],
      "keywords": [
        "Controllers/PI.mo",
        "Projectionica.Controllers.PI",
        "modelica_annotation",
        "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "kind": "reference",
      "module_ids": [
        "repo:modelica-projected-navigation:module:Projectionica.Controllers"
      ],
      "page_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI",
      "path": "Controllers/PI.mo",
      "paths": [
        "Controllers/PI.mo",
        "Controllers/PI.mo#annotation.documentation"
      ],
      "repo_id": "modelica-projected-navigation",
      "sections": [
        {
          "body": "Projected reference page for `Projectionica.Controllers.PI`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo`\n- `Controllers/PI.mo#annotation.documentation`",
          "level": 1,
          "paths": [
            "Controllers/PI.mo",
            "Controllers/PI.mo#annotation.documentation"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n\nSymbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)",
          "level": 2,
          "paths": [
            "Controllers/PI.mo",
            "Controllers/package.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)",
          "level": 2,
          "paths": [
            "Controllers/PI.mo#annotation.documentation"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI#sources",
          "title": "Documentation"
        }
      ],
      "symbol_ids": [
        "repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI"
      ],
      "title": "Projectionica.Controllers.PI"
    }
  },
  "family_cluster": null,
  "node_context": {
    "ancestors": [
      {
        "doc_id": "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation",
        "line_range": [
          8,
          18
        ],
        "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#overview",
        "node_title": "Overview",
        "page_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI",
        "page_kind": "reference",
        "page_title": "Projectionica.Controllers.PI",
        "path": "Controllers/PI.mo",
        "repo_id": "modelica-projected-navigation",
        "structural_path": [
          "Overview"
        ],
        "text": ":ID: overview\n:PATHS: Controllers/PI.mo, Controllers/PI.mo#annotation.documentation\n\nProjected reference page for `Projectionica.Controllers.PI`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo`\n- `Controllers/PI.mo#annotation.documentation`"
      }
    ],
    "children": [],
    "next_sibling": {
      "doc_id": "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation",
      "line_range": [
        29,
        34
      ],
      "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#sources",
      "node_title": "Documentation",
      "page_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI",
      "page_kind": "reference",
      "page_title": "Projectionica.Controllers.PI",
      "path": "Controllers/PI.mo",
      "repo_id": "modelica-projected-navigation",
      "structural_path": [
        "Overview",
        "Documentation"
      ],
      "text": ":ID: sources\n:PATHS: Controllers/PI.mo#annotation.documentation\n\nDocumentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)"
    },
    "previous_sibling": null
  },
  "related_pages": [
    {
      "doc_id": "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation",
      "doc_ids": [
        "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "example_ids": [],
      "format_hints": [
        "modelica_annotation"
      ],
      "keywords": [
        "Controllers/PI.mo#annotation.documentation",
        "PI documentation",
        "modelica_annotation",
        "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "kind": "reference",
      "module_ids": [],
      "page_id": "repo:modelica-projected-navigation:projection:reference:doc:repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation",
      "path": "Controllers/PI.mo#annotation.documentation",
      "paths": [
        "Controllers/PI.mo#annotation.documentation"
      ],
      "repo_id": "modelica-projected-navigation",
      "sections": [
        {
          "body": "Projected reference page for `PI documentation`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo#annotation.documentation`",
          "level": 1,
          "paths": [
            "Controllers/PI.mo#annotation.documentation"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:doc:repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation#overview",
          "title": "Overview"
        },
        {
          "body": "Symbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)",
          "level": 2,
          "paths": [
            "Controllers/PI.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:doc:repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)",
          "level": 2,
          "paths": [
            "Controllers/PI.mo#annotation.documentation"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:doc:repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation#sources",
          "title": "Documentation"
        }
      ],
      "symbol_ids": [
        "repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI"
      ],
      "title": "PI documentation"
    },
    {
      "doc_id": "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
      "doc_ids": [
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/package.mo",
        "repo:modelica-projected-navigation:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "example_ids": [
        "repo:modelica-projected-navigation:example:Controllers/Examples/Step.mo"
      ],
      "format_hints": [
        "modelica_annotation",
        "modelica_users_guide_page",
        "modelica_users_guide_tutorial",
        "modelica_users_guide_tutorial_annotation"
      ],
      "keywords": [
        "Controllers/Examples/Step.mo",
        "Projectionica.Controllers",
        "modelica_annotation",
        "modelica_users_guide_page",
        "modelica_users_guide_tutorial",
        "modelica_users_guide_tutorial_annotation",
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
      ],
      "kind": "reference",
      "module_ids": [
        "repo:modelica-projected-navigation:module:Projectionica.Controllers"
      ],
      "page_id": "repo:modelica-projected-navigation:projection:reference:module:repo:modelica-projected-navigation:module:Projectionica.Controllers",
      "path": "Controllers/Examples/Step.mo",
      "paths": [
        "Controllers/Examples/Step.mo",
        "Controllers/PI.mo#annotation.documentation",
        "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
        "Controllers/UsersGuide/package.mo",
        "Controllers/package.mo"
      ],
      "repo_id": "modelica-projected-navigation",
      "sections": [
        {
          "body": "Projected reference page for `Projectionica.Controllers`.\nFormat hints:\n- `modelica_annotation`\n- `modelica_users_guide_page`\n- `modelica_users_guide_tutorial`\n- `modelica_users_guide_tutorial_annotation`\nSource paths:\n- `Controllers/Examples/Step.mo`\n- `Controllers/PI.mo#annotation.documentation`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation`\n- `Controllers/UsersGuide/package.mo`\n- `Controllers/package.mo`",
          "level": 1,
          "paths": [
            "Controllers/Examples/Step.mo",
            "Controllers/PI.mo#annotation.documentation",
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
            "Controllers/UsersGuide/package.mo",
            "Controllers/package.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:module:repo:modelica-projected-navigation:module:Projectionica.Controllers#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)",
          "level": 2,
          "paths": [
            "Controllers/package.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:module:repo:modelica-projected-navigation:module:Projectionica.Controllers#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `FirstSteps` (Controllers/UsersGuide/Tutorial/FirstSteps.mo)\n- `FirstSteps documentation` (Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation)\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)\n- `UsersGuide` (Controllers/UsersGuide/package.mo)",
          "level": 2,
          "paths": [
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
            "Controllers/PI.mo#annotation.documentation",
            "Controllers/UsersGuide/package.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:module:repo:modelica-projected-navigation:module:Projectionica.Controllers#sources",
          "title": "Documentation"
        },
        {
          "body": "Examples:\n- `Step` (Controllers/Examples/Step.mo)",
          "level": 2,
          "paths": [
            "Controllers/Examples/Step.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:reference:module:repo:modelica-projected-navigation:module:Projectionica.Controllers#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [],
      "title": "Projectionica.Controllers"
    },
    {
      "doc_id": "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
      "doc_ids": [
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
      ],
      "example_ids": [
        "repo:modelica-projected-navigation:example:Controllers/Examples/Step.mo"
      ],
      "format_hints": [
        "modelica_users_guide_tutorial"
      ],
      "keywords": [
        "Controllers/Examples/Step.mo",
        "FirstSteps",
        "modelica_users_guide_tutorial",
        "repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
      ],
      "kind": "tutorial",
      "module_ids": [
        "repo:modelica-projected-navigation:module:Projectionica.Controllers",
        "repo:modelica-projected-navigation:module:Projectionica.Controllers.UsersGuide"
      ],
      "page_id": "repo:modelica-projected-navigation:projection:tutorial:doc:repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
      "path": "Controllers/Examples/Step.mo",
      "paths": [
        "Controllers/Examples/Step.mo",
        "Controllers/UsersGuide/Tutorial/FirstSteps.mo"
      ],
      "repo_id": "modelica-projected-navigation",
      "sections": [
        {
          "body": "Projected tutorial page for `FirstSteps`.\nFormat hints:\n- `modelica_users_guide_tutorial`\nSource paths:\n- `Controllers/Examples/Step.mo`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo`",
          "level": 1,
          "paths": [
            "Controllers/Examples/Step.mo",
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:tutorial:doc:repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n- `Projectionica.Controllers.UsersGuide` (Controllers/UsersGuide/package.mo)",
          "level": 2,
          "paths": [
            "Controllers/UsersGuide/package.mo",
            "Controllers/package.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:tutorial:doc:repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `FirstSteps` (Controllers/UsersGuide/Tutorial/FirstSteps.mo)",
          "level": 2,
          "paths": [
            "Controllers/UsersGuide/Tutorial/FirstSteps.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:tutorial:doc:repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#sources",
          "title": "Sources"
        },
        {
          "body": "Examples:\n- `Step` (Controllers/Examples/Step.mo)",
          "level": 2,
          "paths": [
            "Controllers/Examples/Step.mo"
          ],
          "section_id": "repo:modelica-projected-navigation:projection:tutorial:doc:repo:modelica-projected-navigation:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [],
      "title": "FirstSteps"
    }
  ],
  "repo_id": "modelica-projected-navigation",
  "tree": {
    "doc_id": "reference/projectionica-controllers-pi-150f69dd61d6",
    "kind": "reference",
    "page_id": "repo:modelica-projected-navigation:projection:reference:symbol:repo:modelica-projected-navigation:symbol:Projectionica.Controllers.PI",
    "path": "reference/projectionica-controllers-pi-150f69dd61d6.md",
    "repo_id": "modelica-projected-navigation",
    "root_count": 2,
    "roots": [
      {
        "children": [],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#projectionica-controllers-pi",
        "structural_path": [
          "Projectionica.Controllers.PI"
        ],
        "summary": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation\n:END:",
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation\n:END:",
        "title": "Projectionica.Controllers.PI",
        "token_count": 8
      },
      {
        "children": [
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              19,
              28
            ],
            "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#anchors",
            "structural_path": [
              "Overview",
              "Anchors"
            ],
            "summary": ":ID: anchors\n:PATHS: Controllers/PI",
            "text": ":ID: anchors\n:PATHS: Controllers/PI.mo, Controllers/package.mo\n\nModules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n\nSymbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)",
            "title": "Anchors",
            "token_count": 13
          },
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              29,
              34
            ],
            "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#sources",
            "structural_path": [
              "Overview",
              "Documentation"
            ],
            "summary": ":ID: sources\n:PATHS: Controllers/PI",
            "text": ":ID: sources\n:PATHS: Controllers/PI.mo#annotation.documentation\n\nDocumentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)",
            "title": "Documentation",
            "token_count": 9
          }
        ],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          8,
          18
        ],
        "node_id": "reference/projectionica-controllers-pi-150f69dd61d6#overview",
        "structural_path": [
          "Overview"
        ],
        "summary": ":ID: overview\n:PATHS: Controllers/PI",
        "text": ":ID: overview\n:PATHS: Controllers/PI.mo, Controllers/PI.mo#annotation.documentation\n\nProjected reference page for `Projectionica.Controllers.PI`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo`\n- `Controllers/PI.mo#annotation.documentation`",
        "title": "Overview",
        "token_count": 20
      }
    ],
    "title": "Projectionica.Controllers.PI"
  }
}
